--- a/examples/common.gradle
+++ b/examples/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.2.2"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.0-RC4"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -17,7 +17,7 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.8.0"
+    akkaVersion = "2.8.1"
     specs2Version = isScala3 ? "5.2.0" : "4.19.0"
     dependencies {
         if (isScala3) {
