--- a/akka-concurrency/common.gradle
+++ b/akka-concurrency/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.1-RC1"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.1-RC2"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -17,7 +17,8 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.8.2"
+    akkaVersion = "2.8.3"
+    logbackVersion = "1.4.8"
     specs2Version = isScala3 ? "5.2.0" : "4.20.0"
     dependencies {
         if (isScala3) {
@@ -29,7 +30,7 @@ project.ext {
         implementation "com.typesafe:config:1.4.2"
         implementation "com.typesafe.akka:akka-actor_${scalaBinaryVersion}:$akkaVersion"
         // test scope
-        testImplementation 'ch.qos.logback:logback-classic:1.2.11'
+        testImplementation 'ch.qos.logback:logback-classic:$logbackVersion'
         testImplementation "com.typesafe.akka:akka-testkit_${scalaBinaryVersion}:$akkaVersion"
         testImplementation 'junit:junit:4.13.2'
         testImplementation "org.specs2:specs2-junit_${scalaBinaryVersion}:$specs2Version"
