--- a/akka-concurrency/pom.xml
+++ b/akka-concurrency/pom.xml
@@ -13,7 +13,6 @@
         <java.version>11</java.version>
 
         <!-- Scala settings -->
-        <scala.groupId>org.scala-lang</scala.groupId>
         <scala.version>2.13.11</scala.version>
         <scala.binary.version>2.13</scala.binary.version>
         <scala.local.install>true</scala.local.install>
@@ -22,6 +21,7 @@
         <akka.version>2.8.3</akka.version>
         <config.version>1.4.2</config.version>
         <exec.maven.version>3.1.0</exec.maven.version>
+        <junit.version>4.13.2</junit.version>
         <maven.compiler.version>3.11.0</maven.compiler.version>
         <maven.jar.version>3.3.0</maven.jar.version>
         <scala.maven.version>1.0.0</scala.maven.version>
@@ -33,9 +33,10 @@
         <m2.akka-actor.jar>${m2.directory}/com/typesafe/akka/akka-actor_${scala.binary.version}/${akka.version}/akka-actor_${scala.binary.version}-${akka.version}.jar</m2.akka-actor.jar>
         <m2.akka-testkit.jar>${m2.directory}/com/typesafe/akka/akka-testkit_${scala.binary.version}/${akka.version}/akka-testkit_${scala.binary.version}-${akka.version}.jar</m2.akka-testkit.jar>
         <m2.config.jar>${m2.directory}/com/typesafe/config/${config.version}/config-${config.version}.jar</m2.config.jar>
+        <m2.junit.jar>${m2.directory}/junit/junit/${junit.version}/junit-${junit.version}.jar</m2.junit.jar>
         <m2.scala-library.jar>${m2.directory}/org/scala-lang/scala-library/${scala.version}/scala-library-${scala.version}.jar</m2.scala-library.jar>
         <m2.scalatest.jar>${m2.directory}/org/scalatest/scalatest_${scala.binary.version}/${scalatest.version}/scalatest_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest.jar>
-		<m2.scalatest-matchers-core.jar>${m2.directory}/org/scalatest/scalatest-matchers-core_${scala.binary.version}/${scalatest.version}/scalatest-matchers-core_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-matchers-core.jar>
+        <m2.scalatest-matchers-core.jar>${m2.directory}/org/scalatest/scalatest-matchers-core_${scala.binary.version}/${scalatest.version}/scalatest-matchers-core_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-matchers-core.jar>
         <m2.scalatest-shouldmatchers.jar>${m2.directory}/org/scalatest/scalatest-shouldmatchers_${scala.binary.version}/${scalatest.version}/scalatest-shouldmatchers_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-shouldmatchers.jar>
         <m2.scalatest-wordspec.jar>${m2.directory}/org/scalatest/scalatest-wordspec_${scala.binary.version}/${scalatest.version}/scalatest-wordspec_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest-wordspec.jar>
     </properties>
@@ -64,6 +65,13 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-testkit_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/junit/junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
