--- a/akka-cookbook/common.gradle
+++ b/akka-cookbook/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.1-RC4"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.1"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -17,9 +17,9 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.8.3"
-    logbackVersion = "1.4.8"
-    specs2Version = isScala3 ? "5.2.0" : "4.20.0"
+    akkaVersion = "2.8.4"
+    logbackVersion = "1.4.11"
+    specs2Version = isScala3 ? "5.3.2" : "4.20.0"
     dependencies {
         if (isScala3) {
             implementation "org.scala-lang:scala3-compiler_3:$scalaVersion"
