--- a/effective-akka/common.gradle
+++ b/effective-akka/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.1-RC2"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.3.1"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -17,8 +17,8 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.8.3"
-    logbackVersion = "1.4.8"
+    akkaVersion = "2.8.4"
+    logbackVersion = "1.4.11"
     scalatestVersion = "3.2.16"
     dependencies {
         if (isScala3) { 
