--- a/akka-concurrency/common.gradle
+++ b/akka-concurrency/common.gradle
@@ -17,9 +17,9 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.8.4"
+    akkaVersion = "2.8.5"
     logbackVersion = "1.4.11"
-    specs2Version = isScala3 ? "5.3.2" : "4.20.0"
+    specs2Version = isScala3 ? "5.3.2" : "4.20.2"
     dependencies {
         if (isScala3) {
             implementation "org.scala-lang:scala3-compiler_3:$scalaVersion"
@@ -69,6 +69,7 @@ tasks.withType(JavaCompile) {
     // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.compile.CompileOptions.html
     options.deprecation true
     options.encoding "UTF8"
+    logger.info("11111111111111")
 }
 
 task compileScala(type: JavaExec) {
