--- a/alexandreesl-examples/akka-stream-lab/Makefile
+++ b/alexandreesl-examples/akka-stream-lab/Makefile
@@ -5,7 +5,7 @@
 ##
 ##############################################################################
 
-include ../../Makefile.inc
+include ../Makefile.inc
 
 SOURCE_DIR  = src
 TARGET_DIR  = target
@@ -18,26 +18,26 @@ SCALA_FLAGS  = -classpath "$(CPATH)"
 ##############################################################################
 ## main rules
 
-SOURCES   = $(shell $(FIND) "$(SOURCE_DIR)/main/scala" -name "*.scala" 2>/dev/null)
-RESOURCES = $(shell $(FIND) "$(SOURCE_DIR)/main/resources" -name "*.conf" -o -name "*.xml" 2>/dev/null)
+SOURCES   = $(shell $(FIND) "$(SOURCE_DIR)/main/scala" -type f -name "*.scala" 2>/dev/null)
+RESOURCES = $(shell $(FIND) "$(SOURCE_DIR)/main/resources" -type f -name "*.conf" -o -name "*.xml" 2>/dev/null)
 TARGET    = $(TARGET_DIR)/.latest-build
 
 OPTS_FILE    = $(TARGET_DIR)/scalac_opts.txt
 SOURCES_FILE = $(TARGET_DIR)/scalac_sources.txt
 
-MAIN_CLASS = com.packt.chapter02.ParentChild
+MAIN_CLASS = com.alexandreesl.Main
 MAIN_ARGS ?= 
 
 all: build
 
 build: deps $(TARGET)
 
-$(TARGET): $(SOURCES)
+$(TARGET): $(SOURCES) $(RESOURCES)
 	[ -d "$(CLASSES_DIR)" ] || "$(MKDIR)" -p "$(CLASSES_DIR)"
 	@$(ECHO) $(SCALAC_FLAGS) -d "$(CLASSES_DIR)" > "$(OPTS_FILE)"
 	@$(ECHO) $(SOURCES) > "$(SOURCES_FILE)"
 	"$(SCALAC)" "@$(OPTS_FILE)" "@$(SOURCES_FILE)"
-	[ -z "$(RESOURCES)" ] || "$(CP)" $(RESOURCES) "$(CLASSES_DIR)"
+	for f in $(RESOURCES); do "$(CP)" "$$f" "$(CLASSES_DIR)"; done
 	@$(TOUCH) "$(TARGET)"
 
 clean:
@@ -62,7 +62,7 @@ help:
 ## doc rules
 
 DOC_TARGET_DIR = $(TARGET_DIR)/docs
-DOC_SOURCES    = $(shell $(FIND) "$(CLASSES_DIR)" -name "*.tasty" 2>/dev/null)
+DOC_SOURCES    = $(shell $(FIND) "$(CLASSES_DIR)" -type f -name "*.tasty" 2>/dev/null)
 DOC_TARGET     = $(DOC_TARGET_DIR)/.latest-build
 
 PROJECT_NAME    ?= $(shell basename $(CURDIR))
