updated .md files, updated build scripts

--- a/examples/Makefile.inc
+++ b/examples/Makefile.inc
@@ -36,6 +36,7 @@ JAR        = $(JAVA_HOME)/bin/jar
 JAVA       = $(JAVA_HOME)/bin/java
 JAVAC      = $(JAVA_HOME)/bin/javac
 JAVADOC    = $(JAVA_HOME)/bin/javadoc
+MVN        = $(MAVEN_HOME)/bin/mvn
 SCALA      = $(SCALA_HOME)/bin/scala
 SCALAC     = $(SCALA_HOME)/bin/scalac
 SCALADOC   = $(SCALA_HOME)/bin/scaladoc
@@ -46,7 +47,6 @@ CP         = cp
 ECHO       = echo
 FIND       = find
 MKDIR      = mkdir
-MVN        = mvn
 RM         = rm
 TOUCH      = touch
 WGET       = wget
