--- a/akka-essentials/Makefile.inc
+++ b/akka-essentials/Makefile.inc
@@ -51,7 +51,7 @@ WGET       = wget
 endif
 
 ## https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor
-AKKA_VERSION = 2.8.5
+AKKA_VERSION = 2.9.0-M2
 ## https://mvnrepository.com/artifact/com.typesafe/config
 CONFIG_VERSION = 1.4.3
 ## https://mvnrepository.com/artifact/org.slf4j/slf4j-api
