--- a/akka-cookbook/Makefile.inc
+++ b/akka-cookbook/Makefile.inc
@@ -53,7 +53,7 @@ WGET       = wget
 endif
 
 ## https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor
-AKKA_VERSION = 2.8.5
+AKKA_VERSION = 2.9.0-M2
 ## https://mvnrepository.com/artifact/com.typesafe/config
 CONFIG_VERSION = 1.4.3
 
