--- a/examples/common.gradle
+++ b/examples/common.gradle
@@ -17,7 +17,7 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.8.5"
+    akkaVersion = "2.9.0-M2"
     logbackVersion = "1.4.11"
     specs2Version = isScala3 ? "5.3.2" : "4.20.2"
     dependencies {
