--- a/examples/ivy.xml
+++ b/examples/ivy.xml
@@ -10,14 +10,14 @@
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency org="log4j" name="log4j" rev="1.2.17"/>
         
-        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.3.2-RC1-->
-        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.3.2-RC3"/>
-        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.3.2-RC3"/>
-        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.3.2-RC3"/>
-        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.3.2-RC3"/>
-        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.3.2-RC3"/>
-        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.3.2-RC3"/>
-        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.3.2-RC3"/>
+        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.3.2 -->
+        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.3.2"/>
+        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.3.2"/>
+        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.3.2"/>
+        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.3.2"/>
+        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.3.2"/>
+        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.3.2"/>
+        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.3.2"/>
         <dependency org="org.jline" name="jline-reader" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal-jna" rev="3.19.0"/>
@@ -29,9 +29,9 @@
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
         <dependency org="com.typesafe" name="config" rev="1.4.2"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
-        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.9.1"/>
-        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor-typed -->
-        <dependency org="com.typesafe.akka" name="akka-actor-typed_2.13" rev="2.9.1"/>
+        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.9.2"/>
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
+        <dependency org="com.typesafe.akka" name="akka-actor-typed_2.13" rev="2.9.2"/>
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency org="org.projectlombok" name="lombok" rev="1.18.30"/>
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
